--- a/Pandas/SVM_Notebook.ipynb
+++ b/Pandas/SVM_Notebook.ipynb
@@ -201,15 +201,10 @@
    "outputs": [],
    "source": [
     "# train and test the model\n",
-    "import numpy as np\n",
-    "train_predicted = text_clf.predict(X_train)\n",
-    "train = np.mean(train_predicted == y_train) \n",
+    "print(f'Best Score: {gs_clf.best_score_}')                              \n",
     "\n",
-    "test_predicted = text_clf.predict(X_test)\n",
-    "test = np.mean(test_predicted == y_test)            \n",
-    "\n",
-    "print(f'Training prediction: {train}')\n",
-    "print(f'Test prediction: {test}')"
+    "for param_name in sorted(parameters.keys()):\n",
+    "    print((param_name, gs_clf.best_params_[param_name]))"
    ]
   },
   {
@@ -235,10 +230,10 @@
     }
    ],
    "source": [
-    "# print a report of our model performance \n",
-    "from sklearn import metrics\n",
-    "print(metrics.classification_report(y_test, test_predicted,\n",
-    "    target_names=sentiments))"
+    "# # print a report of our model performance \n",
+    "# from sklearn import metrics\n",
+    "# print(metrics.classification_report(y_test, test_predicted,\n",
+    "#     target_names=sentiments))"
    ]
   },
   {
