--- a/Pandas/RandomForestClassifier.ipynb
+++ b/Pandas/RandomForestClassifier.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# make sure all tweets are in lowercase and remove hashtags, mentions, and links.\n",
     "clean_data = []                 \n",
     "for feature in features:\n",
-    "        item = ' '.join(word.lower() for word in feature.split() \\\n",
+    "        item = ' '.join(word.lower() for word in str(feature).split() \\\n",
     "            if not word.startswith('#') and \\\n",
     "            not word.startswith('@') and \\\n",
     "            not word.startswith('http') and \\\n",
@@ -76,30 +76,23 @@
     "        \n",
     "        if item == \"\" or item == \"RT\":\n",
     "                continue\n",
-    "        clean_data.append(item)"
+    "        clean_data.append(item)\n",
+    "        \n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['what said',\n",
-       " 'plus youve added commercials to the experience tacky',\n",
-       " 'i didnt today must mean i need to take another trip',\n",
-       " 'its really aggressive to blast obnoxious entertainment in your guests faces amp they have little recourse',\n",
-       " 'and its a really big bad thing about it',\n",
-       " 'seriously would pay 30 a flight for seats that didnt have this playing its really the only bad thing about flying va',\n",
-       " 'yes nearly every time i fly vx this ear worm wont go away',\n",
-       " 'really missed a prime opportunity for men without hats parody there',\n",
-       " 'well i didntbut now i do d',\n",
-       " 'it was amazing and arrived an hour early youre too good to me']"
+       "['nan', 'nan', 'nan', 'nan', 'nan', 'nan', 'nan', 'nan', 'nan', 'nan']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,24 +143,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.feature_extraction.text import TfidfTransformer\n",
-    "from sklearn import svm\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "text_clf = Pipeline([\n",
     "    ('vect', CountVectorizer()),\n",
     "    ('tfidf', TfidfTransformer()),\n",
-    "    ('clf', svm.SVC(gamma='scale'))\n",
+    "    ('clf', RandomForestClassifier())\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,26 +172,82 @@
     "    #remove words above a specified threshold (used in place of stop words)\n",
     "    'vect__max_df': (0.25, 0.5, 0.75, 1.0),\n",
     "    #include idf\n",
-    "    'tfidf__use_idf': (True, False)\n",
+    "    'tfidf__use_idf': (True, False),\n",
+    "    'clf__n_estimators':(50, 100, 150, 200), \n",
+    "    'clf__criterion': ('gini', 'entropy')\n",
     "}\n",
     "\n",
-    "gs_clf = GridSearchCV(text_clf, parameters, cv=5, iid=False)"
+    "gs_clf = GridSearchCV(text_clf, parameters, cv=5, iid=False, n_jobs = -1, verbose = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 192 candidates, totalling 960 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:  1.2min\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:  5.2min\n",
+      "[Parallel(n_jobs=-1)]: Done 442 tasks      | elapsed: 13.8min\n",
+      "[Parallel(n_jobs=-1)]: Done 792 tasks      | elapsed: 21.7min\n",
+      "[Parallel(n_jobs=-1)]: Done 960 out of 960 | elapsed: 28.3min finished\n"
+     ]
+    }
+   ],
    "source": [
     "predictor = gs_clf.fit(cleaned_data_no_urls, train_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Models/Complement.joblib']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from joblib import dump, load\n",
+    "dump(predictor, 'Models/Complement.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Score: 0.626912615335706\n",
+      "('clf__criterion', 'gini')\n",
+      "('clf__n_estimators', 50)\n",
+      "('tfidf__use_idf', True)\n",
+      "('vect__max_df', 0.25)\n",
+      "('vect__ngram_range', (1, 1))\n"
+     ]
+    }
+   ],
    "source": [
     "# train and test the model\n",
     "print(f'Best Score: {gs_clf.best_score_}')                              \n",
@@ -209,26 +258,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "    positive       0.79      0.95      0.86      2291\n",
-      "    negative       0.72      0.46      0.56       774\n",
-      "     neutral       0.85      0.61      0.71       595\n",
-      "\n",
-      "   micro avg       0.79      0.79      0.79      3660\n",
-      "   macro avg       0.79      0.67      0.71      3660\n",
-      "weighted avg       0.79      0.79      0.77      3660\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # print a report of our model performance \n",
     "# from sklearn import metrics\n",
