--- a/Pandas/SVM_Notebook.ipynb
+++ b/Pandas/SVM_Notebook.ipynb
@@ -134,9 +134,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 1, 0, 0, 0, 2, 1, 2, 2])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Encode the labels to numbers\n",
     "sentiments = ['positive', 'negative', 'neutral']\n",
@@ -145,7 +156,8 @@
     "le.fit(sentiments)\n",
     "# list(le.classes_)\n",
     "train_labels = le.transform(labels) \n",
-    "# test_labels = le.transform(y_test)"
+    "# test_labels = le.transform(y_test)\n",
+    "train_labels[:10]"
    ]
   },
   {
